# dbt-ydb

./: CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
.github/docker/: docker-compose.yml
.github/scripts/: increment_version.py
.github/workflows/: nightly-tests.yml  python-publish.yml  tests.yml
dbt/adapters/ydb/: __init__.py  column.py  connections.py  impl.py  relation.py
dbt/include/ydb/: dbt_project.yml  profile_template.yml
dbt/include/ydb/macros/: adapters.sql  catalog.sql
examples/clickbench-demo/: .gitignore  README.md  dbt_project.yml  prepare_source.sql
examples/clickbench-demo/macros/: clean_string.sql  get_query_param.sql  incremental_operand_safe.sql  types.sql
examples/clickbench-demo/models/01_raw/: raw_clicks.sql  sources.yml
examples/clickbench-demo/models/02_base/: base_clicks.sql  base_clicks.yml
examples/clickbench-demo/models/03_staging/: stg_clicks.sql  stg_clicks.yml  stg_users.sql  stg_users.yml
examples/clickbench-demo/models/04_intermediate/: int_clicks_parsed.sql  int_clicks_parsed.yml  int_users.yml
examples/clickbench-demo/models/06_analytics/: analytics.yml  clicks_demo_sample.sql  rpt_kpi_last_week.sql
examples/clickbench-demo/snapshots/: clicks_snapshot.yml
examples/jaffle_shop/: .gitignore  README.md  dbt_project.yml  profiles.yml
examples/jaffle_shop/models/: customers.sql  orders.sql  overview.md  schema.yml
examples/jaffle_shop/snapshots/: orders_snapshot.yml
tests/: conftest.py
tests/functional/adapter/: test_basic.py
tests/unit/: test_seed_values.py
(+30 files in other folders)
