[project]
name = "dbt-ydb"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "dbt-core (>=1.8.0,<2.0.0)",
    "dbt-common (>=1.23.0,<2.0.0)",
    "ydb-dbapi (>=0.1.11,<0.2.0)",
    "dbt-adapters (>=1.14.8,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "dbt" },
    { include = "dbt/**/*.py" },
]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
